--- a/index.html
+++ b/index.html
@@ -14,13 +14,34 @@
         <div class="header__content">
             <a href="index.html" class="header__logo">MovieDB</a>
 
-            <div>
+            <form>
                 <input type="text" class="header__search" placeholder="Найти">
-            </div>
+            </form>
         </div>
     </header>
     <div class="container">
         <div class="movies"> </div>
+        <div class="modal">
+            <div class="modal__card">
+                <img class="modal__movie-backdrop" src="${respData.posterUrl}" alt="">
+                <h2>
+                  <span class="modal__movie-title"></span>
+                  <span class="modal__movie-release-year"> </span>
+                </h2>
+                <ul class="modal__movie-info">
+                  <div class="loader"></div>
+                  <li class="modal__movie-genre">Жанр</li>
+                  <li class="modal__movie-runtime"></li>
+                  <li >Сайт: <a class="modal__movie-site" href=""></a></li>
+                  <li class="modal__movie-overview"></li>
+                </ul>
+                <button type="button" class="modal__button-close">Закрыть</button>
+              </div>
+        </div>
+        <!-- <img src="./images/The_King_poster.jpg" alt=""> -->
+
+
+
     </div>
 
     <script src="./script.js"></script>
